--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
   padding: 0.5em;
 }
 
-finput[type="radio"]:checked + span {
+input[type="radio"]:checked + span {
   color: rgb(28, 202, 28);
   border-bottom: 2px rgb(28, 202, 28) solid;
 }
